--- a/valgomat2.html
+++ b/valgomat2.html
@@ -20,7 +20,8 @@
         <button id = "btnNext" type="button">Neste</button>
     </form>
     <h2>Ditt resultat:</h2>
-    <p id="result"></p>
+    <p id="result">
+    </p>
 
     <script defer src="valgomat2.js"></script>
 </body>
